[package]
name = "luaegui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
egui = "0.22"
mlua = { version = "0.9.0-beta.2", features = ["luau"] }

[dev-dependencies]
egui_backend = "0.4"
egui_render_glow = "0.4"
egui_commonmark = "0.7"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
egui_window_glfw_passthrough = { version = "0.4", default-features = false }
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
egui_window_glfw_passthrough = { version = "0.4" }
