[package]
name = "luaegui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
egui = "0.26"
mlua = { version = "0.9", features = ["luau-vector4"] }

[dev-dependencies]
egui_commonmark = "0.13"

# disable default glfw features on emscripten
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
egui_overlay = { version = "0.8.1", default-features = false, features = [
    "egui_default",
    "three_d",
] }
# enable default glfw feature (enabled by default) on non-wasm platforms.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
egui_overlay = { version = "0.8.1" }
